--- a/package.json
+++ b/package.json
@@ -41,8 +41,7 @@
   },
   "scripts": {
     "prepare": "make js",
-    "postpublish": "make clean",
-    "postinstall": "make clean"
+    "postpublish": "make clean"
   },
   "main": "js/document",
   "browserify": {
